@@ -8,6 +8,10 @@
    2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2021-04-23 16:54 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
+  * source/winapi/hlenta.prg
+  * source/gtk/hlenta.prg
+    ! propset added, minor fix.
 
 2021-04-23 15:05 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
   * source/winapi/hlenta.prg
